@@ -3,6 +3,7 @@
 
 # MODULES: any modules that produce data to be translated need be loaded 
 # **BEFORE** Translator.H5Output (such as calibrated data or NDArray's)
+# event data added by modules listed after Translator.H5Output is not translated.
 modules = Translator.H5Output
 
 files = **TODO: SPECIFY INPUT FILES OR DATA SOURCE HERE**
@@ -24,8 +25,7 @@ store_epics = true
 #
 # One can include or exclude a class of Psana types with the following 
 # options. Only the strings include or exclude are valid for these 
-# type filtering options.  Comments and blanks will be stripped from the 
-# line by the Translator module.
+# type filtering options. 
 # 
 # Note - Epics in the list below refers only to the epicsConfig data
 # which is the alias list, not the epics pv's (see store_epics above for those)
@@ -98,7 +98,7 @@ std_string = include           # std::string
 # psana -n 5 -m EventKeys exp=cxi1235:run=33 
 #
 # Will print the EventKeys in the first 5 events.  If the output includes
-# Event keys:
+#
 #   EventKey(type=Psana::EvrData::DataV3, src=DetInfo(NoDetector.0:Evr.2))
 #   EventKey(type=Psana::CsPad::DataV2, src=DetInfo(CxiDs1.0:Cspad.0))
 #   EventKey(type=Psana::CsPad2x2::ElementV1, src=DetInfo(CxiSc2.0:Cspad2x2.1))
@@ -116,13 +116,14 @@ src_filter = include all
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # CALIBRATION FILTERING
 #
-# Certain Psana modules produce different kinds of calibration output.
-# In some cases, the output will be data of the same type and src as 
-# the uncalibrated data, with an additional key, such as 'calibrated'.
-# Presently the Translator looks for the types CsPad::DataV1 and CsPad::DataV2.
+# Psana calibration modules can produce a calibrated version of CsPad data
+# (The data types CsPad::DataV1 or CsPad::DataV2). The module output will be 
+# data of the same type and src as the uncalibrated data, with an additional key, 
+# such as 'calibrated'.
+#
 # The Translator defaults to skipping the translation of the uncalibrated
 # data when a calibrated version of that data is present.  Below you 
-# can control the calibration key and wether or not to include the
+# can control the calibration key and whether or not to include the
 # uncalibrated data.
 
 calibration_key = calibrated
@@ -139,8 +140,8 @@ include_uncalibrated_data = false
 # NDARRAY AND STD::STRING KEY FILTERING
 #
 # A number of NDArray's and any std::string found in the event store are translated into 
-# the hdf5 file.  NDarray's up to 4 dimensions of 10 basic types (8, 16, 32 and 64bit 
-# signed and unsigned int, float and double) should be translated, but see the comment after the 
+# the hdf5 file.  NDarray's up to 4 dimensions of 10 basic types (8, 16, 32 and 64 bit 
+# signed and unsigned int, float and double) are translated, but see the comment after the 
 # ndarray_types option in the type filtering section for the most up to date list.
 #
 # These NDArray's and std::string's can be filtered by specifying the eventKey key that was
@@ -195,15 +196,15 @@ deflate = 1
 # ---------------------------------------
 # REFINED DATASET CONTROL
 #
-# There are six classes of datasets for which indivual options for shuffle,
+# There are six classes of datasets for which individual options for shuffle,
 # deflate, chunkSizeTargetInBytes and chunkSizeTargetObjects can be specified:
 #
 # regular (most everything, all psana types)
 # epics (all the epics pv's)
 # damage (accompanies all regular data from event store)
-# eventId (the time dataset that also accompanies all regular data, and epics pv's)
 # ndarrays (new data from other modules)
 # string's (new data from other modules)
+# eventId (the time dataset that also accompanies all regular data, epics pvs, ndarrays and strings)
 #
 # The options for regular datasets have been discussed above. The other five datasets 
 # get their default values for shuffle, deflate, chunkSizeInBytes and chunkSizeInObjects
@@ -247,7 +248,7 @@ max_saved_split_events = 3000
 # The typenames for beam line data defaults to being written as (for example) 
 # Bld::BldDataEBeamV0. Setting short_bld_name to true causes it to be 
 # written as BldDataEBeamV0. If set to true, names are written differently
-# then with o2o-translate and the change may brake code that reads h5 files 
+# then with o2o-translate and the change may break code that reads h5 files 
 # (such as psana)
 
 short_bld_name = false
