@@ -254,6 +254,17 @@ void copyValueFldToUnrolled < Unroll::EpicsPvCtrlString >
   strncpy(unrollBuffer.value, psanaVar.value(el), Psana::Epics::MAX_STRING_SIZE);
 }
 
+template <>
+void copyValueFldToUnrolled < Unroll::EpicsPvCtrlEnum >
+       (const Unroll::EpicsPvCtrlEnum::PsanaSrc &psanaVar, int16_t el, 
+        Unroll::EpicsPvCtrlEnum & unrollBuffer) {
+  int numberOfStrs = psanaVar.dbr().no_str();
+  void * valueAddress = &unrollBuffer.strs[numberOfStrs];
+  uint16_t * valuePtr = static_cast<uint16_t*>(valueAddress);
+  MsgLog(logger,info,"copyValueFldToUnRolled EpicsPvCtrlEnum el=" << el);
+  *valuePtr = psanaVar.value(el);  
+}
+
 hid_t createH5TypeId_epicsTimeStamp() {
   hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::epicsTimeStamp));
   if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for epicsTimeStamp");
@@ -334,26 +345,6 @@ hid_t createH5TypeId_EpicsPvCtrlFloat(hid_t pvNameType, hid_t unitsType) {
   status = std::min(status, H5Tinsert(typeId, "value", offsetof(Unroll::EpicsPvCtrlFloat, value), H5T_NATIVE_FLOAT));
 
   if (status < 0) MsgLog(logger, fatal, "error inserting field into h5 typeId for EpicsPvCtrlFloat"); 
-
-  return typeId;
-}
-
-hid_t createH5TypeId_EpicsPvCtrlEnum(hid_t pvNameType, hid_t strsArrayType, int numberOfStrings) {
-  hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::EpicsPvCtrlEnum));
-  if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for EpicsPvCtrlEnum");
-  herr_t status = 0;
-  status = std::min(status, H5Tinsert(typeId, "pvId", offsetof(Unroll::EpicsPvCtrlEnum, iPvId), H5T_NATIVE_INT16));
-  status = std::min(status, H5Tinsert(typeId, "dbrType", offsetof(Unroll::EpicsPvCtrlEnum, iDbrType), H5T_NATIVE_INT16));
-  status = std::min(status, H5Tinsert(typeId, "numElements", offsetof(Unroll::EpicsPvCtrlEnum, iNumElements), H5T_NATIVE_INT16));
-  status = std::min(status, H5Tinsert(typeId, "pvname", offsetof(Unroll::EpicsPvCtrlEnum, sPvName), pvNameType));
-  status = std::min(status, H5Tinsert(typeId, "status", offsetof(Unroll::EpicsPvCtrlEnum, status), H5T_NATIVE_INT16));
-  status = std::min(status, H5Tinsert(typeId, "severity", offsetof(Unroll::EpicsPvCtrlEnum, severity), H5T_NATIVE_INT16));
-  status = std::min(status, H5Tinsert(typeId, "no_str", offsetof(Unroll::EpicsPvCtrlEnum, no_str), H5T_NATIVE_INT16));
-  status = std::min(status, H5Tinsert(typeId, "strs", offsetof(Unroll::EpicsPvCtrlEnum, strs), strsArrayType));
-  size_t offsetForValue = offsetof(Unroll::EpicsPvCtrlEnum, strs) +  numberOfStrings * Psana::Epics::MAX_ENUM_STRING_SIZE;
-  status = std::min(status, H5Tinsert(typeId, "value", offsetForValue, H5T_NATIVE_UINT16));
-
-  if (status < 0) MsgLog(logger, fatal, "error inserting field into h5 typeId for EpicsPvCtrlEnum"); 
 
   return typeId;
 }
@@ -566,23 +557,32 @@ hid_t createH5TypeId_EpicsPvTimeDouble(hid_t stampType) {
   return typeId;
 }
 
-template <>
-void copyValueFldToUnrolled < Unroll::EpicsPvCtrlEnum >
-       (const Unroll::EpicsPvCtrlEnum::PsanaSrc &psanaVar, int16_t el, 
-        Unroll::EpicsPvCtrlEnum & unrollBuffer) {
-  int numberOfStrs = psanaVar.dbr().no_str();
-  void * valueAddress = &unrollBuffer.strs[numberOfStrs];
-  uint16_t * valuePtr = static_cast<uint16_t*>(valueAddress);
-  MsgLog(logger,info,"copyValueFldToUnRolled EpicsPvCtrlEnum el=" << el);
-  *valuePtr = psanaVar.value(el);  
-}
  
+
+hid_t createH5TypeId_EpicsPvCtrlEnum(hid_t pvNameType, hid_t strsArrayType, int numberOfStrings) {
+  hid_t typeId = H5Tcreate(H5T_COMPOUND, sizeof(Unroll::EpicsPvCtrlEnum));
+  if (typeId < 0) MsgLog(logger, fatal, "Failed to create h5 type id for EpicsPvCtrlEnum");
+  herr_t status = 0;
+  status = std::min(status, H5Tinsert(typeId, "pvId", offsetof(Unroll::EpicsPvCtrlEnum, iPvId), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "dbrType", offsetof(Unroll::EpicsPvCtrlEnum, iDbrType), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "numElements", offsetof(Unroll::EpicsPvCtrlEnum, iNumElements), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "pvname", offsetof(Unroll::EpicsPvCtrlEnum, sPvName), pvNameType));
+  status = std::min(status, H5Tinsert(typeId, "status", offsetof(Unroll::EpicsPvCtrlEnum, status), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "severity", offsetof(Unroll::EpicsPvCtrlEnum, severity), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "no_str", offsetof(Unroll::EpicsPvCtrlEnum, no_str), H5T_NATIVE_INT16));
+  status = std::min(status, H5Tinsert(typeId, "strs", offsetof(Unroll::EpicsPvCtrlEnum, strs), strsArrayType));
+  size_t offsetForValue = offsetof(Unroll::EpicsPvCtrlEnum, strs) +  numberOfStrings * Psana::Epics::MAX_ENUM_STRING_SIZE;
+  status = std::min(status, H5Tinsert(typeId, "value", offsetForValue, H5T_NATIVE_UINT16));
+
+  if (status < 0) MsgLog(logger, fatal, "error inserting field into h5 typeId for EpicsPvCtrlEnum"); 
+
+  return typeId;
+}
+  
 template <>
 int getNumberStringsForCtrlEnum<Unroll::EpicsPvCtrlEnum>(boost::shared_ptr<Unroll::EpicsPvCtrlEnum::PsanaSrc> ptr) 
 { 
   return ptr->dbr().no_str(); 
 }
-
-
-
+ 
 } // Translator
